--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
-.App {
+body {
+  background-color: #000;
+}
+#system {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+#sysName {
+  color: white;
+  font-family: sans-serif;
+  font-size: 32px;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+#msg {
+  color: white;
+  font-family: monospace;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.astro-container {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  margin: 16px;
+}
+.astro {
+  background-color: #FFF;
+  border-radius: 100%;
+  height: 100px;
+  width: 100px;
+}
+.text-center {
   color: white;
+  text-align: center;
+  font-family: monospace;
 }
-
-.App-link {
-  color: #61dafb;
+.text {
+  color: white;
+  font-family: monospace;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box {
+	background-color: #0000;
+	border-radius: 4px;
+	border-color: #FFF4;
+	border-style: solid;
+}
+.hoverable:hover {
+	background-color: #FFF2; 
+}
+.hoverable:active {
+	background-color: #FFFA; 
+	color: black;
 }
